# x2

./: -fpermissive  .Makefile.swp  .cmd.txt.swp  .cproject  .gitignore  .project  .x.Makefile.swp  512KB.img  CMDUtil.exe.stackdump  CMDUtil_main.exe.stackdump  CMDUtil_rwfile.exe.stackdump  CMakeLists.txt  Config.makefile  Descriptor.cpp  Descriptor.h  Descriptor.s  Descriptor_16.s  Descriptor_32.s  Filesystem.h  Functools.h  HINT  IOProgramer.cpp  IOProgramer.h  IOProgramer.ii  IOProgramer_32.s  KernelMemoryConfig.ii  LICENCE  LICENSE  List.cpp  List.h  List_32.s  Makefile  Makefile2  Memory.cpp  Memory.h  MemoryManager.ii  Memory_32.s  PMLoader.cpp  PMLoader.h  PMLoader.s  (+84 more)
Debug/: makefile  sources.mk
Debug/io/: subdir.mk
Debug/src/: subdir.mk
Manuals/: BIOS_int.md  BOOK_stl_source_code.md  Book_c++_primer_5_c++11.md  Boost_mpl.md  CMake.md  GNU_as.md  GNU_automake.md  GNU_binutils.md  GNU_cc.md  GNU_cc_errors.md  GNU_cc_optimize.md  GNU_cc_techniques.md  GNU_g++.md  GNU_gcov.md  GNU_info.md  GNU_ld.md  ISO_c++.md  ISO_c.md  Microsoft_VisualStudio.md  NONE_ssh.md  README.md  Tutorial_bash.md  Tutorial_c++.md  Tutorial_java.md  x2_development.md  x2_filesystem.md  x2_kernel.md  x2_makefile.md
Manuals/Others/: const_optimize.cpp
backups/: x2-0.13.tar.xz
deprecated/: SimpleMemoryManager.cpp  Tree.cpp  config.h
deprecated/preprocessor_functions/: MemoryManager_macros.h.RAW
exports/0.12/: Descriptor.h  IOProgramer.h  List.cpp  List.h  Memory.h  PMLoader.cpp  PMLoader.h  SimpleMemoryManager.cpp  TSS.h  interrupts.cpp  interrupts.h  main.bimg  main.cpp
filesystem/: README.md  README.txt
filesystem/verify-in-cygwin/: CMDUtil.cpp  CMDUtil.exe.stackdump  File.cpp  File.h  LinearSourceManager.cpp  LinearSourceManager.h  Makefile  MallocToSimple.cpp  MallocToSimple.h  Reference.h  core.dump  hdd-2.img  hdd-3.img  hdd.img  hdd32.img  listFile.cpp  listFile.exe.stackdump  listf.exe.stackdump  loadfs.exe.stackdump  main.cpp  mkfs.x2fs.cpp  newFile.cpp
gcc-src/: cyg-libg++.tar.bz2  libg++-2.8.1.3.tar.bz2  libg++.README  libstdc++-manual.20140403.html.tar.bz2  libstdc++-manual.20140403.pdf.bz2  libstdc++-manual.epub
ignore/arm/: asm.elf  asm.s  helloworld.c  output.map
ignore/proxy_python/: ProxyRequestHandler.py  text.txt
include/: AssociatedMemoryManager.cpp  AssociatedMemoryManager.h  Cache.h  Descriptor.h  EnvInterface.h  EnvInterface64Impl.h  EnvInterfaceX2Impl.cpp  EnvInterfaceX2Impl.h  File.h  Filesystem.h  IOProgramer.h  Kernel.h  KernelMemoryConfig.h  List.h  Locator.h  Memory.h  MemoryManager.h  PMLoader.h  Process.h  TSS.h  VirtualMemory.h  after_def.h  config.h  def.h  interrupts.h  libx2.h  test.h
include/64/: CMDUtil.h  MallocToSimple.h
include/common/: CStrings.h  Casssert.h  Getopt.h  Istream.h  NoArch.h  OStream.h  REAME.md  String.h  Vector.h
include/conceptual/: Effctivec++.h  ExtFunctional.h  ResourceProtocal.h  Serialize.h  all.h  configurations.h  precompiled_most.h
include/gtest/: gtest-all.cc  gtest.h  template_src.cpp
include/loki/: Int2Type.h
include/macros/: AssociatedMemoryManager_macros.h  Cache_macros.h  Descriptor_macros.h  Filesystem_macros.h  IOProgramer_macros.h  Kernel_macros.h  List_macros.h  Locator_macros.h  MemoryManager_macros.h  Memory_macros.h  Process_macros.h  VirtualMemory_macros.h  all.h  libx2_macros.h
include/preprocessor_functions/: File_FileDescriptor.h.RAW  File_FileDescriptor_macros.h.RAW  List.cpp.RAW  List.h.RAW  List_TreeNode.cpp.RAW  List_TreeNode.h.RAW  List_TreeNode_macros.h.RAW  List_macros.h.RAW  MemoryManager.h.RAW  MemoryManager_macros.h.RAW
io/: HarddiskIO.cpp
src/: AssociatedMemoryManager.cpp  CMakeLists.txt  Cache.cpp  Descriptor.cpp  EnvInterface64Impl.cpp  File.cpp  File_FileOperation.cpp  Filesystem.cpp  IOProgramer.cpp  Kernel.cpp  KernelMemoryConfig.cpp  List.cpp  Locator.cpp  MBRmain.cpp  Memory.cpp  MemoryManager.cpp  PMLoader.cpp  Process.cpp  SecondaryLoader.cpp  TSS.cpp  Tree.cpp  UserProcess.cpp  VBRmain.cpp  VirtualMemory.cpp  idleProcess.cpp  interrupts.cpp  libx2.cpp  main.cpp  protected_main.cpp  test.cpp
src/64/: CMDUtil_gtest.cpp  CMDUtil_main.cpp  CMDUtil_mkfs.x2fs.cpp  CMDUtil_rwfile.cpp  CMDUtil_test.cpp  CMDUtil_test_serialize.cpp  MallocToSimple.cpp
src/cmake/: hello.cpp
src/common/: Getopt.cpp
src/conceptual/: Serialize.cpp  all.cpp  precompiled_most.cpp
stdc++/include/: .cxxabi.h.swp  c++config  exception  new
stdc/examples/: testx.c  use-assert.c  use-setjmp.c  use-stdarg.c  use-stddef.c  use-stdlib.c
stdc/include/: CHANGELOG  README.txt  assert.h  ctype.h  errno.h  float.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h
test/: .cproject  .project  512KB.s  T.cpp  T.s  This.cpp  a.out  a.s  anon_struct.cpp  asm.s  decltype_test.cpp  define.cpp  exception.cpp  exception_2.s  extend.cpp  extern.cpp  extern2.cpp  goto.cpp  implement.h  in-loop-ctor.cpp  init.cpp  initTarget.cpp  initializer_list.cpp  interrupt.cpp  interrupt.s  interrupts.s  main.s  main_end.cpp  make.exe.stackdump  makefile.targets  malloc_seeAddr.cpp  name.cpp  new.E  new.cpp  new.out  new.s  pack.cpp  push_es.s  readline.cpp  regex_search.exe.stackdump  (+21 more)
test/Debug/: ld.exe.stackdump  makefile  sources.mk
test/cmake/: CMakeLists.txt  hello.cpp
test/old/: 512KB.s  args.cpp  asm_of.cpp  asm_of.s  bool.cpp  c99_regex.cpp  d2arr.cpp  defun.cpp  dual_block.cpp  exception.cpp  exception.out  exception.s  exsup.h  extend.s  friend.cpp  goto.cpp  implement.s  inc.cpp  init.s  initTarget.out  initTarget.s  init_call.cpp  input.cpp  macro.cpp  main.cpp  main.s  main32.cpp  main32.s  main_read.s  malloc.c  pack.c  pack.s  partialTemplate.cpp  printf.cpp  raw_string.cpp  regex_search.cpp  replacement_new.cpp  replacement_new.s  return.s  rvalue.cpp  (+21 more)
test/src/: cc1plus.exe.stackdump  foo.cpp.RAW  (+38 more)
tools/: README.txt
(+775 files in other folders)
